--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@heroui/react": "^2.8.0-beta.2",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.3.1",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.26",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "prisma": "^6.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
