--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/react": "^2.8.0-beta.2",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.3.1",
+    "bcryptjs": "^3.0.2",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.26",
     "react": "^19.0.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
