--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
