Completed Chapter 41 "Seeding data into the Database"

--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "eslint-config-next": "15.3.1",
     "prisma": "^6.3.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
