--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.26",
     "react": "^19.0.0",
