--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
-    "next": "15.3.1",
-    "next-auth": "^5.0.0-beta.26",
+    "next": "^15.5.0",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -32,7 +32,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^15.5.0",
     "prisma": "^6.3.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
