--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "next": "^15.5.0",
     "next-auth": "^5.0.0-beta.29",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
