--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "next": "^15.5.0",
     "next-auth": "^5.0.0-beta.29",
