--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "next": "^15.5.0",
+    "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
@@ -35,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^15.5.0",
+    "eslint-config-next": "^15.5.6",
     "prisma": "^6.3.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
