--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
