--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@heroui/react": "^2.8.0-beta.2",
+    "@heroui/react": "^2.8.5",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.2",
