feat: Completed Section 10 - Chapter 145 'Adding an email provider.'

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ CLOUDINARY_API_SECRET="api secret"
 NEXT_PUBLIC_PUSHER_APP_KEY="pusher public key"
 PUSHER_APP_ID="appId"
 PUSHER_SECRET="pusher secret"
+
+RESEND_API_KEY="ReSend mail key"
