feat: Completed Section 10 - Chapter 152 'Social login part 2/3.'

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ PUSHER_APP_ID="appId"
 PUSHER_SECRET="pusher secret"
 
 RESEND_API_KEY="ReSend mail key"
+
+GITHUB_CLIENT_ID="GitHub OAuth 2.0 ClientID"
+GITHUB_CLIENT_SECRET="GitHub OAuth 2.0 Secret"
