--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ RESEND_API_KEY="ReSend mail key"
 
 GITHUB_CLIENT_ID="GitHub OAuth 2.0 ClientID"
 GITHUB_CLIENT_SECRET="GitHub OAuth 2.0 Secret"
+
+GOOGLE_CLIENT_ID="Google OAuth 2.0 ClientID"
+GOOGLE_CLIENT_SECRET="Google OAuth 2.0 Secret"
